# tutorials

./: .gitignore  1_manual_mode.ipynb  2_backpropagation.ipynb  3_multiple_inputs.ipynb  4_whole_dataset.ipynb  5_deep_neural_network.ipynb  5_mlp_xor.ipynb  6_mnist.ipynb  README.md  pyproject.toml  requirements.txt  simple-neural-network.ipynb  test.ipynb
.ipynb_checkpoints/: 1_manual_mode-checkpoint.ipynb  2_backpropagation-checkpoint.ipynb  3_multiple_inputs-checkpoint.ipynb  5_deep_neural_network-checkpoint.ipynb  panel-test-checkpoint.ipynb
cnn/: autoencoders.ipynb
deep_learning/: 1_manual_mode.ipynb  2_backpropagation.ipynb  3_multiple_inputs.ipynb  4_perceptron_xor.ipynb  5_mlp_xor.ipynb  7_testing.ipynb  activation_function.ipynb  backpropagation.ipynb  classification.ipynb  manual_mode.ipynb  mlp_xor.ipynb  mnist.ipynb  multiple_inputs.ipynb  non-linear.ipynb
deep_learning_tutorials/: 1_manual_mode.ipynb
dl_framework/: keras.ipynb  tensors.ipynb
llm/: 01_text_embeding.ipynb  02_attention.ipynb  chp03_attention.ipynb  chp04_gpt_model.ipynb  chp05_pretraining.ipynb  chp06_finetunning_for_classification.ipynb  chp07_finetunning_for_instruction.ipynb  text_embeding.ipynb
math/: calculus.ipynb  counter_plot.ipynb
nlp/: attention.ipynb  cbow.ipynb  fasttext.ipynb  glove.ipynb  huggingface.ipynb  lstm.ipynb  movie_review.ipynb  rnn.ipynb  skipgram.ipynb  skipgram_negative_samplying.py
pytorch_projects/: basics.ipynb  character_modeling.ipynb  classification_model.ipynb  fashion_minist.ipynb  fuel_efficency.ipynb  linear_model.ipynb  neural_network.ipynb  (+2 more)
(+18 files in other folders)
